--- a/PAGES/about.html
+++ b/PAGES/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - THIS DELIVERY SITE</title>
+    <title>About Us - DROPMATE DELIVERY SITE</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="../CSS/about_css.css"> <!-- Link to your custom CSS -->
@@ -29,7 +29,7 @@
         <div class="row">
             <div class="col-md-6">
                 <h2>Our Mission</h2>
-                <p>At THIS DELIVERY SITE, our mission is to provide fast, reliable, and affordable delivery services to our customers. We strive to ensure that your packages arrive safely and on time, every time.</p>
+                <p>At DROPMATE DELIVERY  DELIVERY SITE, our mission is to provide fast, reliable, and affordable delivery services to our customers. We strive to ensure that your packages arrive safely and on time, every time.</p>
             </div>
             <div class="col-md-6">
                 <h2>Our Vision</h2>
@@ -49,7 +49,7 @@
             </div>
             <div class="col-md-6">
                 <h2>Our Story</h2>
-                <p>Founded in [Year], THIS DELIVERY SITE started with a simple idea: to make delivery services more efficient and customer-friendly. Over the years, we have grown into a trusted name in the industry, serving thousands of satisfied customers.</p>
+                <p>Founded in [Year], DROPMATE DELIVERY  DELIVERY SITE started with a simple idea: to make delivery services more efficient and customer-friendly. Over the years, we have grown into a trusted name in the industry, serving thousands of satisfied customers.</p>
             </div>
         </div>
 
@@ -74,7 +74,7 @@
                 </a>
             </div>
         </div>
-        <p class="rights_reserved">&copy; 2023 THIS DELIVERY SITE. All rights reserved.</p>
+        <p class="rights_reserved">&copy; 2025 DROPMATE DELIVERY  DELIVERY SITE. All rights reserved.</p>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
