--- a/PAGES/order.html
+++ b/PAGES/order.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Orders - THIS DELIVERY SITE</title>
+  <title>Orders - DROPMATE DELIVERY SITE</title>
   <!-- Add your custom styles here -->
   <link rel="stylesheet" href="../CSS/order.css"/>
 </head>
@@ -24,7 +24,7 @@
   <nav>
     <a href="user_dashboard.html">Home</a>
     <a href="user_settings.html">Settings</a>
-    <a href="#">Logout</a>
+    <a href="../index.html">Logout</a>
   </nav>
 
 
