--- a/PAGES/registration.html
+++ b/PAGES/registration.html
@@ -6,7 +6,7 @@ You said:
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Register - THIS DELIVERY SITE</title>
+  <title>Register - DROPMATE DELIVERY SITE</title>
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -19,9 +19,9 @@ You said:
 <body>
   <!-- Navigation Bar -->
   <nav>
-    <a href="#">About</a>
-    <a href="#">Services</a>
-    <a href="#">Contact</a>
+    <a href="/PAGES/about.html">About</a>
+    <a href="/PAGES/services.html">Services</a>
+    <a href="/PAGES/contact.html">Contact</a>
     <a href="log_in.html">Login</a>
   </nav>
 
