--- a/PAGES/request_page.html
+++ b/PAGES/request_page.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Request a Rider - THIS DELIVERY SITE</title>
+  <title>Request a Rider - DROPMATE DELIVERY SITE</title>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <!-- Add your custom styles here -->
