--- a/PAGES/services.html
+++ b/PAGES/services.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Services - THIS DELIVERY SITE</title>
+    <title>Our Services - DROPMATE DELIVERY SITE</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="/CSS/service.css"> <!-- Custom CSS for additional styling -->
@@ -22,7 +22,7 @@
         <a href="user_dashboard.html">Home</a>
         <a href="order.html">Orders</a>
         <a href="request_page.html">Request</a>
-        <a href="#">Logout</a>
+        <a href="../index.html">Logout</a>
       </nav>
 
     <!-- Services Section -->
