--- a/PAGES/user_settings.html
+++ b/PAGES/user_settings.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Settings - THIS DELIVERY SITE</title>
+    <title>User Settings - DROPMTE DELIVERY SITE</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="/CSS/user_settings.css"> <!-- Link to your custom CSS -->
@@ -17,7 +17,7 @@
         <a href="order.html"><i class="fas fa-box"></i> Orders</a>
         <a href="request_page.html"><i class="fas fa-truck"></i> Request Rider</a>
         <a href="user_settings.html" class="active"><i class="fas fa-cog"></i> Settings</a>
-        <a href="#"><i class="fas fa-sign-out-alt"></i> Logout</a>
+        <a href="../index.html"><i class="fas fa-sign-out-alt"></i> Logout</a>
     </div>
 
     <div class="main-content">
